--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,16 @@
 @import 'css-wipe';
+
+html {
+  font-family: sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+input {
+  width: 100px;
+}
